# o3b

./: .gitignore  pyproject.toml
scripts/: validate_siglip2.py  validate_tipsv2.py
setup/: setup_edible_cu124.sh
src/configs/dataset/: dm.yaml  dm_object.yaml  dm_object_pair.yaml  hc3d.yaml  hc3d_frame.yaml  hc3d_frame_object.yaml  hc3d_frame_object_cat_sharded.yaml  hc3d_frame_object_pair.yaml  hc3d_frame_object_pair_cat_sharded.yaml  hc3d_frame_object_sharded.yaml  hc3d_frame_object_train.yaml  hc3d_object.yaml  hc3d_object_pair.yaml  housecorr3d.yaml  housecorr3d_object.yaml  housecorr3d_object_pair.yaml  opentt.yaml
src/configs/model/: diff3f.yaml  dinov2b.yaml  dinov2s.yaml  dinov3b.yaml  dm.yaml  dmmv.yaml  dmweld.yaml  dmweldflip.yaml  genpose2.yaml  siglip2.yaml  tipsv2.yaml
src/configs/platform/: default.yaml  scratch.yaml  slurm.yaml  slurm_l40.yaml  slurm_lmbh200.yaml  slurm_lmbl40_diff3f.yaml  slurm_lmbl40_diff3f_mrf3dtopo.yaml  slurm_lmbl40_dm.yaml  slurm_lmbl40_dm_mrf3dtopo.yaml  slurm_lmbl40_genpose2.yaml  slurm_lmbl40_genpose2_mrf3dtopo.yaml  slurm_lmbl40_morpheus.yaml  slurm_lmbl40_mrf3dtopo.yaml
src/o3b/: cli.py  ddp.py  io.py  multiprocessing.py  run.py
src/o3b/cv/: io.py  select.py
src/o3b/cv/geometry/: _mesh.py  (+5 more)
src/o3b/data/: __init__.py  axis.py  batch_datatypes.py  modalities.py  viz.py
src/o3b/dataset/: __init__.py  __main__.py  cli.py  dataset.py  sharding.py  tform.py
src/o3b/model/: __init__.py  model.py
src/o3b/task/: __init__.py  task.py
src/o3b/transform/: __init__.py  transform.py
src/od3d_basic/: cli.py  io.py  run.py
src/od3d_basic/data/: modalities.py  viz.py
src/od3d_basic/dataset/: __init__.py  __main__.py  cli.py  dataset.py  tform.py
src/od3d_basic/model/: __init__.py  model.py
src/od3d_basic/task/: __init__.py  task.py
src/od3d_basic/transform/: __init__.py  transform.py
(+243 files in other folders)
