[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o3b"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gdown",
    "hydra-core",
    "omegaconf",
    "opencv-python",
    "torchvision",
    "open3d",
    "libigl",
    "xatlas",
    "scipy",
    "timm",
    "PyYAML>=6.0",
    "viser>=0.2",
    "trimesh>=4.0",
    "wandb",
    "torch_geometric",
    "gdist",
    "qwen-vl-utils",
]

[project.scripts]
o3b          = "od3d_basic.cli:main"
od3d_dataset = "od3d_basic.dataset.cli:main"

[project.optional-dependencies]
pyrender = ["pyrender2"]
nvdiffrast = ["nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git"]

[tool.setuptools.packages.find]
where = ["src"]
