[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "o3b"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gdown",
    "hydra-core",
    "omegaconf",
    "opencv-python<5",  # opencv 5.0 wheels dropped OpenEXR support (depth/mask .exr loading)
    "torchvision",
    "open3d",
    "libigl",
    "potpourri3d", # fmap
    "robust-laplacian", # fmap
    "xatlas",
    "scipy",
    "timm",
    "PyYAML>=6.0",
    "viser>=0.2",
    "trimesh>=4.0",
    "rtree",  # trimesh.nearest.on_surface (mesh-barycentric correspondence) needs it

    "wandb",
    "torch_geometric",
    "gdist",
    "qwen-vl-utils",
    "datasets",
    "transformers>=4.49",
]

[project.scripts]
o3b          = "o3b.cli:main"
od3d_dataset = "o3b.dataset.cli:main"

[project.optional-dependencies]
pyrender = ["pyrender2"]
nvdiffrast = ["nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git"]

[tool.setuptools.packages.find]
where = ["src"]
